--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@arcgis/core": "^4.24.7",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "dotenv": "^16.0.1",
+    "ncp": "^2.0.0",
+    "socket.io-client": "^4.5.1",
+    "vue": "^3.2.13",
+    "vue-3-socket.io": "^1.0.5",
+    "vue-arcgis-api": "^0.2.4",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.3",
+    "vue-socket.io": "^3.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
